--- a/colorGame.css
+++ b/colorGame.css
@@ -4,6 +4,7 @@
 
 body{
 	background-color:  #232323;
+	font-family: "Montserrat", "Avenir";
 }
 
 .squares{
@@ -12,21 +13,70 @@ body{
 	padding-bottom: 30%;
 	float: left;
 	margin: 1.66%;
-	border-radius: 30px;
+	border-radius: 30%;
+	transition: background 0.6s;
 
 }
 
 #container{
-	margin:  0 auto;
+	margin:  20px auto;
 	max-width:  600px;
+	padding-top: 50px;
 
 }
 
 h1{
+	padding: 20px 0;
 	color:  white;
 	text-align: center;
+	margin: 0;
+	line-height: 1.1;
+	font-weight: normal;
+	text-transform: uppercase;
+	background: steelblue;
 }
 
-span{
+/* span{
 	color: white;
+} */
+
+#stripe{
+	background-color: white;
+	text-align: center;
+	height: 30px;
+	color: black;
+}
+
+.selected{
+	color: white;
+	background-color: steelblue;
+}
+
+#colorMessage{
+	display: inline-block;
+	width: 20%;
+   	font-weight: 700;
+   	color: steelblue;
+
+}
+
+button{
+border: none;
+background: none;
+text-transform: uppercase;
+height: 100%;
+font-weight: 700;
+color: steelblue;
+letter-spacing: 1%;
+font-size: inherit;
+transition: all 0.3s;
+}
+
+#colorDisplay{
+	font-size: 200%;
+}
+
+button:hover{
+	color: white;
+	background-color: steelblue;
 }
